<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9400D3"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/VRActivityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="#FFD700"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:text="@string/vractivity"
        />

    <TextView
        android:id="@+id/onCreateVR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="#FFA500"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:text="@string/oncreate_executed"
        />

    <TextView
        android:id="@+id/onStartVR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="#FFA500"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:text="@string/onstart_executed"
        />

    <TextView
        android:id="@+id/onStopVR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="#FFA500"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:text="@string/onstop_executed"
        />

    <TextView
        android:id="@+id/onDestroyVR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="#FFA500"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:text="@string/ondestroy_executed"
        />



</LinearLayout>